AMS-67 Extend Task REST endpoints to allow creation in new database